fix featured works spacing

--- a/css/style.css
+++ b/css/style.css
@@ -180,14 +180,14 @@ h1 {
   }
 @media (max-width: 1200px) {
 h1 {
-    font-size: 44px;
-    line-height: 52px;
+    font-size: 48px;
+    line-height: 56px;
      }
   }
 @media (max-width: 767px) {
 h1 {
-    font-size: 34px;
-    line-height: 44px;
+    font-size: 36px;
+    line-height: 48px;
      }
   }
 @media (max-width: 600px) {
@@ -198,15 +198,15 @@ h1 {
     }
 
 h2 {
-  font-size: 44px;
-  line-height: 56px;
+  font-size: 40px;
+  line-height: 52px;
   font-weight: 400;
   color:rgba(0, 0, 0, .24);
 }
 @media (max-width: 992px) {
 h2 {
     font-size: 32px;
-    line-height: 36px;
+    line-height: 40px;
      }
   }
 @media (max-width: 767px) {
@@ -655,12 +655,7 @@ span.dot {
 
 .featured-wrapper {
   margin: 0 auto;
-  width:80vw;
-}
-@media (max-width:992px) {
-  .featured-wrapper {
-    width:100%;
-  }
+  width:100%;
 }
 
 .featured {
@@ -672,18 +667,18 @@ span.dot {
 }
 @media (max-width:767px) {
   .featured {
-    width:100%;
     flex-direction:column;
   }
 }
 
 .featured > div {
   width:50%;
-  padding:40px;
+  padding:64px 40px;
 }
 @media (max-width:767px) {
   .featured > div {
     width:100%;
+    padding:40px 20px;
   }
 }
 
@@ -706,6 +701,19 @@ span.dot {
   padding:40px 0px;
   width:80%;
 }
+@media (max-width: 1200px) {
+.featured-text p {
+    font-size: 18px;
+    line-height:28px;
+    width:100%;
+     }
+  }
+@media (max-width: 767px) {
+.featured-text p {
+    font-size: 16px;
+    line-height: 24px;
+     }
+  }
 
 
 .featured-img {
